create jwt validation filter and apply filter to api gateway routes

--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
             - Path=/api/v1/patients/**
           filters:
             - StripPrefix=0
+            - JwtValidation
 
         - id: api-docs-patient-route
           uri: http://patient-service:4000
